# Lab1-OOP

./: .gitignore  CMakeLists.txt  README.md
include/: replacinfunc.h
src/: replacinfunc.cpp
tests/: tests.cpp
